[package]
authors = ["Ning Sun <sunng@about.me>"]
categories = ["template-engine"]
description = "Handlebars templating implemented in Rust."
documentation = "https://docs.rs/handlebars/"
homepage = "https://github.com/sunng87/handlebars-rust"
keywords = [
    "handlebars",
    "templating",
    "web",
]
license = "MIT"
name = "handlebars"
readme = "README.md"
repository = "https://github.com/sunng87/handlebars-rust"
version = "0.30.0-beta.4"
[metadata.release]
sign-commit = true
upload-doc = true

[[metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
replace = "{{version}}"
search = "Unreleased"

[[metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
replace = "{{date}}"
search = "ReleaseDate"

[dependencies]
lazy_static = "^1.0.0"
log = "^0.3.1"
pest = "^1.0.0-beta"
pest_derive = "^1.0.0-beta"
quick-error = "^1.0.0"
regex = "^0.2.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
typemap = "0.3.3"

[dev-dependencies]
env_logger = "^0.4.0"
maplit = "^1.0.0"
serde_derive = "^1.0.0"

[lib]
name = "handlebars"
path = "src/lib.rs"
